# artifice

./: .gitignore  .gitmodules  Cargo.toml  GOALS.md  NOTES.md  SHADERS.md  Settings.toml  TODO  artifice-schema.json  copy_windows_bindings.ps1  default_style.ron  imgui.ini  masterplan  mine.color-theme.json  rules.pl  rustfmt.toml  test.art  test.art.json  test.qml
.cargo/: config
adrs/: 0001-kyute-visual-tree.md  0002-inner-vs-outer-reconciliation.md  0003-kyute-terms.md  0004-module-organization.md  0005-themes.md  0006-remove-action-type.md  0007-pixel-snapping.md  0008-visual-design.md  0009-attracting-contributors.md  0010-event-propagation.md  0011-multiple-windows.md  0012-partial-relayout.md  0013-retained-render-graph.md  0014-kyute-revisited.md  0015-mid-level-renderer.md  0016-data-definition.md  0017-artifice-shader-ops.md
artifice/: Cargo.toml  build.rs
artifice-gfxbase/: Cargo.toml
artifice-gfxbase/macros/: Cargo.toml
artifice-gfxbase/src/: buffer.rs  dimensions.rs  format.rs  layout.rs  lib.rs  sampling.rs  typedesc.rs  vertex.rs
artifice-main/: Cargo.toml
artifice-main/src/: app.rs  main.rs  tree.rs
artifice-opengl/: Cargo.toml
artifice-opengl/src/: buffer.rs  draw.rs  error.rs  framebuffer.rs  gl_format.rs  handle.rs  lib.rs  renderbuffer.rs  sampler_cache.rs  (+4 more)
artifice/examples/: scene_info.rs
artifice/macros/: Cargo.toml
artifice/macros/src/: data.rs  lib.rs  topic.rs
artifice/macros/tests/: data.rs  topic.rs
artifice/src/: application.rs  document.rs  ffi.rs  geom.rs  gltf.rs  lib.rs  material.rs  render.rs  scene.rs  ui.rs  util.rs
artifice/src/core/: mod.rs  node.rs
artifice/src/data/: atom.rs  mod.rs  network.rs  node.rs  property.rs
artifice/src/eval/: device.rs  error.rs  image.rs  imaging.rs  mod.rs  registry.rs  shader.rs  task_map.rs  variability.rs
artifice/src/eval/pipeline/: codegen.rs  layout.rs  mod.rs  program.rs
artifice/src/model/: atom.rs  attribute.rs  connection.rs  document.rs  edit.rs  error.rs  file.rs  metadata.rs  mod.rs  named_object.rs  network.rs  node.rs  param.rs  parser.rs  path.rs  property.rs  sampler.rs  schema.rs  share_group.rs  typedesc.rs  value.rs
artifice/src/operators/: blur.rs  mod.rs  read.rs
artifice/src/render/: gl.rs  vertex.rs
artifice/src/render/gl/: api.rs  error.rs  format.rs  framebuffer.rs  handle.rs  mod.rs  shader.rs  texture.rs  uniform.rs  vertex_array.rs
artifice/src/ui/: document.rs  mod.rs  platform.rs  window.rs
artifice/src/ui/application/: document.rs
artifice/src/ui/common/: event_loop.rs  layout.rs  mod.rs  popup.rs  view.rs
artifice/src/ui/common/platform/: mod.rs
artifice/src/ui/common/platform/windows/: mod.rs  paint.rs  window.rs
artifice/src/ui/common/widgets/: button.rs  checkbox.rs  label.rs  lensed.rs  map.rs  mod.rs  padding.rs  tuple.rs  vbox.rs  visual.rs
artifice/src/ui/kyute/: event.rs  layout.rs  mod.rs  state.rs  visual.rs
artifice/src/ui/kyute/renderer/: metrics.rs  renderer.rs
artifice/src/ui/kyute/widget/: baseline.rs  button.rs  dummy.rs  expand.rs  flex.rs  id.rs  map.rs  mod.rs  text.rs
artifice/src/util/: messaging.rs  mod.rs
artifice/src/util/model/: change.rs  data.rs  lens.rs  mod.rs  state.rs  update.rs
artifice/src/util/model/lens/: vec.rs
artifice/src/view/: app.rs  collection.rs  mod.rs  node.rs  toolbar.rs  view3d.rs
artifice/src/widgets/: mod.rs  tree.rs
artifice/tests/: props.rs
ashley/: Cargo.toml
ashley/data/tests/: background.glsl
ashley/src/: ast.rs  back.rs  glsl.rs  lexer.rs  lib.rs
ashley/tests/: translation.rs
data/: style.toml
graal/: Cargo.toml  build.rs  default_style.ron
graal-bench/: Cargo.toml
graal-bench/shaders/: background.frag  background.vert  egui.frag  egui.vert  encode_normal.glsl  mesh_vis.frag  mesh_vis.vert
graal-bench/src/: background.rs  blit.rs  bounding_box.rs  buffer.rs  camera.rs  descriptor.rs  egui_renderer.rs  fragment_output.rs  geometry_pass.rs  load_image.rs  main.rs  mesh.rs  pipeline.rs  scene.rs  shader.rs  taa.rs  vertex.rs
graal-fx/: Cargo.toml
graal-fx/examples/: live.rs
graal-fx/src/: grammar.lalrpop  lexer.rs  lib.rs
graal-fx/tests/: background.gfx  testbench.gfx
graal-spirv/: Cargo.toml
graal-spirv/src/: inst.rs  layout.rs  lib.rs  typedesc.rs
graal/examples/: autosync.rs  complex_dag.rs  copy_image.rs  simple.rs
graal/macros/: Cargo.toml
graal/macros/src/: buffer_data.rs  descriptor_set_interface.rs  fragment_output_interface.rs  lib.rs  pipeline_interface.rs  struct_layout.rs  vertex_data.rs  vertex_input_interface.rs
graal/macros/tests/: buffer.rs  descriptor.rs  fragment_output.rs  vertex.rs
graal/src/: allocator.rs  buffer.rs  cache.rs  context.rs  descriptor.rs  device.rs  fragment_output.rs  handle.rs  instance.rs  lib.rs  pass.rs  pipeline.rs  resource.rs  serial.rs  surface.rs  swapchain.rs  vertex.rs
graal/src/context/: batch.rs  descriptor.rs  external_memory_handle.rs  frame.rs  mod.rs  pass.rs  resource.rs  submission.rs  sync_table.rs  transient.rs
graal/src/device/: mod.rs
graal/src/platform/: mod.rs  windows.rs
graal/src/platform_impl/: mod.rs  windows.rs
graal/src/utils/: mod.rs
graal/tests/: autosync.rs  frames.rs
haikara/: Cargo.toml
haikara/src/: imgui.frag  imgui.vert  imgui_glue.rs  main.frag  main.rs  main.vert  visualizer.frag  visualizer.vert
kyute-iml/: Cargo.toml
kyute-shell/: Cargo.toml
mlr/: Cargo.toml  NOTES.rst
mlr-plugin/: Cargo.toml
mlr-plugin/src/: lib.rs
mlr-std/: Cargo.toml
mlr/examples/: background.rs
mlr/macros/: Cargo.toml
mlr/macros/src/: buffer_data.rs  descriptor_set_interface.rs  fragment_output_interface.rs  lib.rs  pipeline_interface.rs  struct_layout.rs  vertex_data.rs  vertex_input_interface.rs
mlr/macros/tests/: buffer.rs  descriptor.rs  struct_layout.rs  vertex.rs
mlr/src/: arguments.rs  buffer.rs  context.rs  descriptor.rs  device.rs  frame.rs  image.rs  lib.rs  pipeline.rs  sampler.rs  shader.rs  utils.rs  vertex.rs
mlr/tests/: image.rs
oiio-build/: CMakeLists.txt
syncvis/: syncvis.html  syncvis.js
veda/: Cargo.toml
(+63 files in other folders)
