[workspace]
members = [
    "artifice",              # Node, Ops and evaluator
    "artifice-main",         # executable
    "artifice/macros",       # macros
    "mlr",                   # the mid-level renderer
    "mlr/macros",            # the mid-level renderer - proc macros
    "graal",                 # graphics resource abstraction layer
    "graal-bench",           # graphics resource abstraction layer - testbench
    "graal-spirv",           # graphics resource abstraction layer - SPIRV reflection utilities
    #"haikara", # shading stylization test
    "kyute",                 # user interface library - widgets and application architecture
    "kyute/macros",          # user interface library - widgets and application architecture - proc macros
    "kyute-shell",           # user interface library - windowing, drawing and system integration
    "kyute-style",           # user interface library - style files
    "kyute-style-editor",           # user interface library - style files
]
exclude = ["ext/winit"]

[profile.dev]
incremental = false

[profile.release]
debug = true
