[workspace]
members = [
    "artifice",              # Node, Ops and evaluator
    "artifice-main",         # executable
    "artifice/macros",       # macros
    "mlr",                   # the mid-level renderer
    "mlr/macros",            # the mid-level renderer - proc macros
]

[profile.release]
debug = true
