[package]
name = "artifice-main"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.2.17", features = ["fmt"] }
artifice = { path = "../artifice" }
inline-spirv = "0.1.2"
graal = { path = "../graal" }
glam = "0.15.2"
serde = { version = "1", features = ["derive"], optional = true }
native-dialog = "0.5.5"
druid = "0.7.0"
druid-shell = "0.7.0"
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1.26"