[package]
name = "artifice-main"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.2.17", features = ["fmt"] }
artifice = { path = "../artifice" }
inline-spirv = "0.1.2"
glam = "0.15.2"
serde = { version = "1", features = ["derive"], optional = true }
native-dialog = "0.5.5"
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1.26"
kyute = { path="../../kyute/kyute" }
kyute-common = { path="../../kyute/kyute-common" }