[package]
name = "artifice"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# private macros
artifice-macros = { path = "macros" }
slotmap = { git="https://github.com/ennis/slotmap", branch="manual-iterator-clone" }
lazy_static = "1.4.0"
tracing = "0.1.26"
anyhow = "1.0.40"
thiserror = "1.0.25"
graal = { path = "../graal" }
typemap = "0.3.3"
string_cache = "0.8.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
druid = "0.7.0"
