[package]
name = "artifice"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# private macros
artifice-macros = { path = "macros" }
slotmap = "1.0.6"
lazy_static = "1.4.0"
tracing = "0.1.26"
anyhow = "1.0.40"
thiserror = "1.0.25"
anymap = "1.0.0-beta.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
kyute = { path="../../kyute/kyute", features = ["imbl"] }
kyute-common = { path="../../kyute/kyute-common" }
dashmap = "5.0.0"
imbl = "1.0.1"
openimageio = { path = "../../openimageio-rs" }
rusqlite = { version = "0.26.3", features = ["bundled"] }
serde_rusqlite = "0.29.0"
parking_lot = "0.11.2"
euclid = "0.22"
async-trait = "0.1"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "time"] }