[package]
name = "graal-bench"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

[dependencies]
graal = { path = "../graal", features = ["graal-glam"] }
winit = "0.24.0"
raw-window-handle = "0.3.3"
inline-spirv = "0.1.2"
openimageio = { path = "../../openimageio-rs" }
obj = "0.10.2"
glam = "0.13.0"