[package]
name = "graal-fx"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
lalrpop-util = "0.19.4"
regex = "1"
logos = "0.11.4"
ash = "0.31.0"
bumpalo = "3.6.1"
thiserror = "1.0.24"
strum = { version = "0.20", features = ["derive"] }

[dev-dependencies]
notify = "5.0.0-pre.6"
anyhow = "1.0.38"

[build-dependencies]
lalrpop = "0.19.4"