[package]
name = "graal-spirv"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = '2018'

[dependencies]
byteorder = "1.4.2"
spirv_headers = "1.5.0"
ordered-float = "2.1.1"
bumpalo = "3.6.0"
num-traits = "0.2.14"
#typed-arena = "1.4.1"
#dropless-arena = { git = "https://github.com/ennis/dropless-arena" }

