[package]
name = "graal"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
ash = "0.31.0"
bitflags = "1.2.1"
vk-mem = "0.2.2"
lazy_static = "1.4.0"
raw-window-handle = "0.3.3"
slotmap = "1.0.2"
fixedbitset = "0.3.2"
graal-spirv = { path = "../graal-spirv" }
graal-macros = { path = "macros" }
once_cell = "1.7.2"
glam = { version = "0.13.0", optional = true }
serde_json = "1.0.64"

[dev-dependencies]
winit = "0.24.0"
obj = "0.10.2"
inline-spirv = "0.1.2"
openimageio = { path = "../../openimageio-rs" }

[build-dependencies]
shaderc = "0.7.1"
anyhow = "1.0.38"

[features]
graal-glam = ["glam"] # Optional support for glam