[package]
name = "haikara"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.24"
winit = "0.22"
tobj = "2"
thiserror = "1"
anyhow = "1"
imgui = "0.4.0"
imgui-winit-support = "0.4.0"
nalgebra = "0.22.0"
#openexr = "0.7.0"
