[package]
name = "mlr-macros"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
quote = "1.0.9"
syn = "1.0.60"
darling = { version="0.12.0", features=["diagnostics"] }
proc-macro2 = "1.0.24"

[lib]
proc-macro = true

[dev-dependencies]
mlr = { path="../" }